@@ -1,0 +1,9 @@
+<?php
+
+return [
+    'secret' => env('NOCAPTCHA_SECRET'),
+    'sitekey' => env('NOCAPTCHA_SITEKEY'),
+    'options' => [
+        'timeout' => 30,
+    ],
+];
